refactor: Decouple MemoryBlock from Visit and Trip by embedding data directly
This commit updates the memory block models, repositories, and database schema to store Visit and Trip data directly within the memory block tables. Key changes include:

- Added comprehensive attributes to MemoryBlockVisit and MemoryBlockTrip
- Updated JDBC services to handle embedded data
- Modified SQL migration to create tables with embedded data
- Updated generation and service logic to work with new data structure
- Improved null handling and data mapping

The changes allow for more flexible and self-contained memory block representations, reducing dependencies on original data sources.